# BlockSci

./: .gitignore
docker/: Dockerfile  build.sh  publish.sh  release.sh  run.sh  taint_run.sh
src/heuristics/: taint.cpp
temp/: Dockerfile
tools/: CMakeLists.txt
tools/taint/: CMakeLists.txt  cuckoo_filter.cpp  data.csv  main.cpp
